--- a/Website/index.html
+++ b/Website/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="Styles/style.css">
-<script src="points.js"></script>
-<script src="map.js"></script> 
-<script src="pathFinding.js"></script>
-<script src="directions.js"></script>
-<script src="location.js"></script>
+<script src="scripts/points.js"></script>
+<script src="scripts/map.js"></script> 
+<script src="scripts/pathFinding.js"></script>
+<script src="scripts/directions.js"></script>
+<script src="scripts/location.js"></script>
 
 <head>
     
