--- a/Website/index.html
+++ b/Website/index.html
@@ -6,6 +6,7 @@
 <script src="scripts/pathFinding.js"></script>
 <script src="scripts/directions.js"></script>
 <script src="scripts/location.js"></script>
+<script src="scripts/vector2.js"></script>
 
 <head>
     
