--- a/Website/index.html
+++ b/Website/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="Styles/style.css">
-<script src="scripts/points.js"></script>
-<script src="scripts/map.js"></script> 
-<script src="scripts/pathFinding.js"></script>
-<script src="scripts/directions.js"></script>
 <script src="scripts/location.js"></script>
-<script src="scripts/vector2.js"></script>
-
 <head>
-    
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>CUW Navigator</title>
 </head>
-<body>
-    <div> Navigator</div>
-    <button onclick="findPath('Chapel','Welcome Center')">Calc Distance</button>
-    <div id="dist">0</div>
-    <div class="slidecontainer">
-    <input type="range" name="rangeInput" min="0" max="200" value="100"  onchange="useSlider(this.value);" >
+<body style="background-color: #ededed; ">
+    <div class="Title">
+        Welcome to the CUW Navigator!
     </div>
+    <hr />
+    <div class="sub_title">
+        Please allow your location.
+    </div>
+
+    <a class="button-class" onclick="getLocation()">Click to allow Location</a>
     
-    <canvas width=1818 height=1202 id="canvas"></canvas>
+    <a href="selector.html" class="no_location">
+        Continue Without Location
+    </a>
 </body>
 
 </html>
