fixed Style Sheet Path

--- a/Website/index.html
+++ b/Website/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="Styles/style.css">
+<link rel="stylesheet" href="styles/style.css">
 <script src="scripts/location.js"></script>
 <head>
     <title>CUW Navigator</title>
