--- a/Website/Navigator.html
+++ b/Website/Navigator.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="Styles/style.css">
+<link rel="stylesheet" href="styles/style.css">
 <script src="scripts/points.js"></script>
 <script src="scripts/map.js"></script>
 <script src="scripts/pathFinding.js"></script>
