--- a/Website/selector.html
+++ b/Website/selector.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="Styles/style.css">
+<link rel="stylesheet" href="styles/style.css">
 <script src="scripts/selector.js"></script>
 <script src="scripts/points.js"></script>
 <head>
