formatting the mobile sites

--- a/Website/Navigator.html
+++ b/Website/Navigator.html
@@ -25,7 +25,7 @@
         }
     </style>
 
-    <img src="https://simeonbauman.github.io/Capstone-24/Website/images/rightArrow.png" id="dir" class="image">
+    <img src="" id="dir" class="image">
 
     <a class="button-class" onclick="cycleImages()">Next Step</a>
 
