--- a/Website/mobile/Navigator.html
+++ b/Website/mobile/Navigator.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="styles/style.css">
-<script src="scripts/points.js"></script>
-<script src="scripts/map.js"></script>
-<script src="scripts/pathFinding.js"></script>
-<script src="scripts/directions.js"></script>
-<script src="scripts/location.js"></script>
-<script src="scripts/vector2.js"></script>
+<script src="/scripts/points.js"></script>
+<script src="/scripts/map.js"></script>
+<script src="/scripts/pathFinding.js"></script>
+<script src="/scripts/directions.js"></script>
+<script src="/scripts/location.js"></script>
+<script src="/scripts/vector2.js"></script>
 
 <head>
 
