--- a/Website/mobile/index.html
+++ b/Website/mobile/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="styles/style.css">
-<script src="scripts/location.js"></script>
+<script src="/scripts/location.js"></script>
 <head>
     <title>CUW Navigator</title>
 </head>
