--- a/Website/mobile/selector.html
+++ b/Website/mobile/selector.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="styles/style.css">
-<script src="scripts/selector.js"></script>
-<script src="scripts/points.js"></script>
+<script src="/scripts/selector.js"></script>
+<script src="/scripts/points.js"></script>
 <head>
     <title>CUW Navigator</title>
 </head>
