reformatted selector page

--- a/Website/mobile/selector.html
+++ b/Website/mobile/selector.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="styles/style.css">
-<script src="/scripts/selector.js"></script>
-<script src="/scripts/points.js"></script>
+<script src="../scripts/selector.js"></script>
+<script src="../scripts/points.js"></script>
 <head>
     <title>CUW Navigator</title>
 </head>
@@ -11,15 +11,20 @@
         Select Your Path!
     </div>
     <hr />
+    <div style="margin: 10%;"></div>
     <div class="sub_title">
         <label for="StartLocation">Choose a starting location:</label>
+        <div style="margin: 10%;"></div>
         <select name="StartLocation" class="selector" id="start">
         </select>
     </div>
+    <div style="margin: 10%;"></div>
     <div class="sub_title">
         <label for="EndLocation">Choose a desitnation:</label>
+        <div style="margin: 10%;"></div>
         <select name="EndLocation" class="selector" id="end"></select>
     </div>
+    <div style="margin: 20%;"></div>
 
     <a class="button-class" onclick="submit()">Submit</a>
 
